# light_drawing

./: CMakeLists.txt  package.xml
data/drawings/: camel.npy  dancer.npy  human_drawings.npy  night_festival.npy  old_man.npy  rabbit.npy  straight_line.npy
robots/: denso_light.robot.xml
script/: drawing_planner.py  generate_drawing_paths.py  onelinedrawing-pointsgenerator.py
srv/: DrawingRequest.srv
